syntax = "proto3";

package com.pilz.mqttgrpc;

option java_multiple_files = true;
option java_package = "com.pilz.mqttgrpc";
option java_outer_classname = "MqttGrpc";

//The type of a message
enum MgType{
  //The last message in a stream indicating the final status of the call. MgMessage.contents = StatusProto
  STATUS = 0;
  //This is set in the first message sent from a client to a server. MgMessage.contents will be The i/o type of the method
  START = 1;
  //The next message in a stream. MgMessage.contents will be The i/o type of the method
  NEXT = 2;
  //This is set if the message is a flow control message. MgMessage.contents = MgFlow
  FLOW = 3;
}


//Every message sent in either direction is contained in an MgMessage
//The .type of the MgMessage will determine its contents
message  MgMessage{

  //The type of the message. This will determine the type of the .contents
  MgType type = 1;

  //Sequence number. This is required because some brokers do not preserve order (e.g. AWS)
  //If there is potentially more than one message in a stream then the first message in a stream should
  //have a sequence number 1 and and each subsequent message in that stream (including the completed message)
  //should increase the number by 1
  //If there is only one non-error message in a stream then that message should have a sequence number zero
  //This indicates that there is only one message in the stream and that it terminates the stream
  //(This means that for simple request/response the system will only send 2 messages instead of 4).
  uint32 sequence = 2;

  //Every message is part of a call and must have a universally unique call id
  //This should be a base64 url and filename safe string so that it can be used in mqtt topics and is relatively short.
  //See https://www.ietf.org/rfc/rfc4648.txt part 5
  string call = 3;

  //A header. This is only set in the first message from a client to a server (when message.type = MgType.START).
  MgHeader header = 4;

  //.type will determine the type of .contents (see MgType)
  bytes contents = 5;
}


message MgHeader{

  //The topic to which to send all replies for this call.
  string replyTo = 1;


  //This can be got from MethodDescriptor.toProto()
  //This will only be set for first message in a client stream
  //MethodDescriptorProto methodDescriptor = 2;

  //Somehow encode the key value pairs of context here
  //This will only be set for first message in a client stream
  //Context context;

}




//The connection status of a server. Sent to an mqtt LWT topic
//When a service is connected it sends this message with connected = true
//Note that many of these messages may be sent (one for each service in a server) but they are idempotent.
//When a server is disconnected this message will automatically be sent as the topic for the connection status
//will be the LWT for the server.
message ConnectionStatus{
  bool connected = 1;
}

//A response containing the topic on which connection status will be sent
//The client will send an empty message to the serviceBaseTopic/connectionStatus and receive this response
//The client can then listen for ConnectionStatus messages at this topic.
message ConnectionStatusResponse{
  bool ok = 2;
  string connectionStatusTopic = 1;
  string errorMessage = 3;
}
